Update POM Config